structure changes - core

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -114,8 +114,8 @@
     flex-direction: column;
   }
 }
-
-@media (prefers-color-scheme: dark) {
+/* 
+@media (prefers-color-scheme: light) {
   .card,
   .footer {
     border-color: #222;
@@ -126,4 +126,4 @@
   .logo img {
     filter: invert(1);
   }
-}
+} */
