--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,15 +15,15 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
   body {
-    color: white;
+    color: black;
     background: black;
   }
-}
+} */
 
 
 /* body {
